Fix max-width of row is-flex-wrap children

--- a/assets/stylesheets/components/_layouts.scss
+++ b/assets/stylesheets/components/_layouts.scss
@@ -13,7 +13,7 @@ main.container {
     row-gap: 1.5rem;
 
     & .card {
-      max-width: 40rem;
+      max-width: 37.7rem;
     }
   }
 
